--- a/story.html
+++ b/story.html
@@ -21,160 +21,144 @@
     </div>
 
     <!-- Milestones Timeline -->
-    <div class="timeline">
-      <div class="line"></div>
+   <!-- Timeline اصلاح شده -->
+<div class="timeline">
+  <div class="line"></div>
 
-      <div class="milestone" style="--delay:0.1s">
-        <div class="circle">💡</div>
-        <div class="content">
-          <h3>شروع</h3>
-          <p>شناسایی نیاز بازار به محصولات با کیفیت</p>
-        </div>
-      </div>
-
-      <div class="milestone" style="--delay:0.3s">
-        <div class="circle">📈</div>
-        <div class="content">
-          <h3>رشد</h3>
-          <p>توسعه فعالیت در ملزومات اداری و پت‌شاپ</p>
-        </div>
-      </div>
-
-      <div class="milestone" style="--delay:0.5s">
-        <div class="circle">🏆</div>
-        <div class="content">
-          <h3>موفقیت</h3>
-          <p>ارائه خدمات حرفه‌ای و قابل اعتماد</p>
-        </div>
-      </div>
+  <div class="milestone" style="--delay:0.1s">
+    <div class="circle">💡</div>
+    <div class="content">
+      <h3>شروع</h3>
+      <p>شناسایی نیاز بازار به محصولات با کیفیت</p>
     </div>
   </div>
 
-  <!-- 🌈 CSS مخصوص Story -->
-  <style>
-    @keyframes fadeIn { from{opacity:0;} to{opacity:1;} }
-    @keyframes slideUp { from{opacity:0; transform:translateY(30px);} to{opacity:1; transform:translateY(0);} }
+  <div class="milestone" style="--delay:0.3s">
+    <div class="circle">📈</div>
+    <div class="content">
+      <h3>رشد</h3>
+      <p>توسعه فعالیت در ملزومات اداری و پت‌شاپ</p>
+    </div>
+  </div>
 
-    .glass-card {
-      background:rgba(255,255,255,0.8);
-      backdrop-filter:blur(20px);
-      border-radius:1rem;
-      padding:2rem;
-      box-shadow:0 10px 25px rgba(0,0,0,0.08);
-      margin-bottom:4rem;
-      transition:0.3s all;
+  <div class="milestone" style="--delay:0.5s">
+    <div class="circle">🏆</div>
+    <div class="content">
+      <h3>موفقیت</h3>
+      <p>ارائه خدمات حرفه‌ای و قابل اعتماد</p>
+    </div>
+  </div>
+</div>
+
+<style>
+/* کانتینر timeline */
+.timeline {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 3rem;
+  margin-top: 4rem;
+}
+
+/* خط عمودی */
+.timeline .line {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 4px;
+  background: linear-gradient(180deg, hsl(27,79%,52%), hsl(210,100%,20%));
+  border-radius: 2px;
+  z-index: 0;
+}
+
+/* Milestone */
+.milestone {
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 1.5rem;
+  opacity: 0;
+  transform: translateY(30px);
+  transition: all 0.6s ease;
+  max-width: 600px;
+  z-index: 1;
+}
+
+/* نوبت چپ و راست */
+.milestone:nth-child(even) {
+  flex-direction: row-reverse;
+}
+
+/* دایره milestone */
+.milestone .circle {
+  flex-shrink: 0;
+  width: 70px;
+  height: 70px;
+  border-radius: 50%;
+  background: linear-gradient(135deg, hsl(27,79%,52%), hsl(27,79%,62%));
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 2rem;
+  color: white;
+  box-shadow: 0 0 20px rgba(230,126,34,0.3);
+}
+
+/* محتوای متن */
+.milestone .content {
+  background: rgba(255,255,255,0.8);
+  backdrop-filter: blur(10px);
+  border-radius: 0.75rem;
+  padding: 1.5rem 2rem;
+  box-shadow: 0 4px 12px rgba(0,0,0,0.08);
+  transition: all 0.3s ease;
+}
+
+.milestone .content:hover {
+  transform: translateY(-5px);
+  box-shadow: 0 10px 25px rgba(230,126,34,0.2);
+}
+
+.milestone h3 {
+  font-size: 1.25rem;
+  font-weight: 700;
+  color: hsl(210,100%,20%);
+  margin-bottom: 0.5rem;
+}
+
+.milestone p {
+  font-size: 1rem;
+  color: hsl(210,30%,40%);
+  line-height: 1.6;
+}
+
+/* ریسپانسیو موبایل */
+@media(max-width:768px){
+  .timeline .line { left: 10px; transform: none; }
+  .milestone { flex-direction: row; justify-content: flex-start; }
+  .milestone:nth-child(even) { flex-direction: row; }
+  .milestone .content { text-align: right; }
+}
+</style>
+
+<script>
+// انیمیشن ظاهر شدن milestones هنگام اسکرول
+const milestones = document.querySelectorAll('.timeline .milestone');
+const observer = new IntersectionObserver((entries)=>{
+  entries.forEach(entry=>{
+    if(entry.isIntersecting){
+      entry.target.style.opacity = '1';
+      entry.target.style.transform = 'translateY(0)';
+      entry.target.style.transitionDelay = entry.target.style.getPropertyValue('--delay') || '0s';
     }
+  });
+}, {threshold:0.3});
+milestones.forEach(el => observer.observe(el));
+</script>
 
-    .glass-card:hover {
-      transform:translateY(-5px);
-      box-shadow:0 15px 35px rgba(0,0,0,0.15);
-    }
-
-    /* Timeline structure */
-    .timeline {
-      position:relative;
-      margin-top:4rem;
-      display:flex;
-      flex-direction:column;
-      gap:3rem;
-    }
-
-    .timeline .line {
-      position:absolute;
-      top:0;
-      bottom:0;
-      left:50%;
-      transform:translateX(-50%);
-      width:4px;
-      background:linear-gradient(180deg, hsl(27,79%,52%), hsl(210,100%,20%));
-      border-radius:2px;
-    }
-
-    .milestone {
-      display:flex;
-      align-items:center;
-      justify-content:center;
-      gap:1.5rem;
-      position:relative;
-      opacity:0;
-      transform:translateY(30px);
-      transition:0.6s ease;
-    }
-
-    .milestone:nth-child(even) {
-      flex-direction:row-reverse;
-    }
-
-    .milestone .circle {
-      flex-shrink:0;
-      width:70px;
-      height:70px;
-      border-radius:50%;
-      background:linear-gradient(135deg, hsl(27,79%,52%), hsl(27,79%,62%));
-      display:flex;
-      align-items:center;
-      justify-content:center;
-      font-size:2rem;
-      color:white;
-      box-shadow:0 0 20px rgba(230,126,34,0.3);
-      animation:float 5s ease-in-out infinite;
-    }
-
-    .milestone .content {
-      background:rgba(255,255,255,0.8);
-      backdrop-filter:blur(10px);
-      border-radius:0.75rem;
-      padding:1.5rem 2rem;
-      box-shadow:0 4px 12px rgba(0,0,0,0.08);
-      max-width:400px;
-      transition:0.3s all;
-    }
-
-    .milestone .content:hover {
-      transform:translateY(-5px);
-      box-shadow:0 10px 25px rgba(230,126,34,0.2);
-    }
-
-    .milestone h3 {
-      font-size:1.25rem;
-      font-weight:700;
-      color:hsl(210,100%,20%);
-      margin-bottom:0.5rem;
-    }
-
-    .milestone p {
-      font-size:1rem;
-      color:hsl(210,30%,40%);
-      line-height:1.6;
-    }
-
-    @keyframes float {
-      0%,100%{transform:translateY(0px);}
-      50%{transform:translateY(-10px);}
-    }
-
-    @media(max-width:768px){
-      .timeline .line { left:10px; transform:none; }
-      .milestone { flex-direction:row; justify-content:flex-start; }
-      .milestone:nth-child(even){ flex-direction:row; }
-      .milestone .content { text-align:right; }
-    }
-  </style>
-
-  <!-- ⚙️ JS مخصوص Story -->
-  <script>
-    // انیمیشن ظاهر شدن milestones هنگام اسکرول
-    const milestones = document.querySelectorAll('#story .milestone');
-    const observer = new IntersectionObserver((entries)=>{
-      entries.forEach(entry=>{
-        if(entry.isIntersecting){
-          entry.target.style.opacity = '1';
-          entry.target.style.transform = 'translateY(0)';
-          entry.target.style.transitionDelay = entry.target.style.getPropertyValue('--delay');
-        }
-      });
-    },{threshold:0.3});
-    milestones.forEach(el => observer.observe(el));
-  </script>
 
 </section>
